@@ -27,8 +27,7 @@ optflags: alpha -O2
 optflags: sparc -O2
 optflags: m68k -O2 -fomit-frame-pointer
 optflags: ppc -O2 -fsigned-char
-optflags: hppa1.0 -O2 -mpa-risc-1-0
-optflags: hppa1.1 -O2 -mpa-risc-1-0
+optflags: parisc -O2 -mpa-risc-1-0
 optflags: mipseb -O2
 optflags: mipsel -O2
 optflags: arm3 -O2
@@ -56,8 +55,6 @@ arch_canon:	ppc:	ppc	5
 arch_canon:	m68k:	m68k	6
 arch_canon:	IP:	sgi	7
 arch_canon:     rs6000: rs6000  8
-
-arch_canon:    9000/712:       hppa1.1 9
 
 arch_canon:    sun4u:   usparc  10
 arch_canon:	mipsel:	mipsel	11
@@ -146,8 +143,7 @@ arch_compat: ppc: noarch
 arch_compat: mipseb: noarch
 arch_compat: mipsel: noarch
 
-arch_compat: hppa1.1: hppa1.0
-arch_compat: hppa1.0: noarch
+arch_compat: parisc: noarch
 
 arch_compat: arm4: arm3
 arch_compat: arm3: noarch
@@ -170,3 +166,4 @@ buildarch_compat: mipsel: noarch
 buildarch_compat: mipseb: noarch
 buildarch_compat: arm4: noarch
 buildarch_compat: arm3: noarch
+buildarch_compat: parisc: noarch
