@@ -8,6 +8,10 @@
 	- made --rebuilddb a bit more robust by checking data types
 	- added --freshen via popt exec stuff
 	- fixed spelling of expected
+	- updated de.po (Karl Eichwalder)
+	- do a better job of checking for a spec file in tarballs 
+	  (Pavel Roskin)
+	- fixed --triggers alias (Michael Andres)
 
 2.5.1 -> 2.5.2:
 	- added -bs to build just a source package
